# Simplicial-complexes-visualizer

./: CMakeLists.txt  LICENSE  README.md  input.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glm/: CMakeLists.txt
src/: main.cpp
src/core/: embedding-points.hpp  simplicial_complex.hpp
src/render/: render.hpp  renderer.hpp
